src/test/deca/context/valid/while/valid_body_type_float.deca
// Description:
//    Test compatible types in if-then-else branches.
//    Test rule 3.36
//
//
//
// Resultat:
//
// History:
//    créé le 08/01/2025

{
    float x=0;
    float y = 42;
    while (x<y) {
        y=y-1;
        x=x+1;
    }
}
